# conveyor

./: .gitignore  CMakeLists.txt  Makefile  README.md
scripts/: build-sdl2.sh  build-sfml.sh  print_whole_project.sh  sdl2-mingw-toolchain.cmake
src/: .conveyor.h.swp  console_app.c  console_app.cpp  console_app.h  conveyor.c  conveyor.cpp  conveyor.h  enums.h  item.h  main.c  main.cpp  pos.h  sfml_app.cpp  sfml_app.h  size.h  time_mgmt.cpp
src/entities/: BaseBuilding.h  Conveyor.cpp  Conveyor.h  Id.h  Item.h  Size.cpp  Size.h  Space.cpp  Space.h  Transform.h  conveyor.h  item.h  size.cpp  size.h  space.h
src/frameworks/: ConsoleApp.cpp  ConsoleApp.h  SDLApp.cpp  SDLApp.h  SDLApp_Init.cpp  console_app.cpp
src/interfaces/: ICLI.h  IGUI.h  IUI.h
src/use_cases/: ApplicationManager.cpp  ApplicationManager.h  SpaceManager.cpp  SpaceManager.h  UI.cpp  UI.h
